<resources>

    <string name="app_name">LepsiApp</string>
    <string name="nombre_app">LepsiApp</string>
    <string name="title_home">Home</string>
    <string name="Salir">Sign_out</string>
    <string name="title_dashboard">Contactos</string>
    <string name="title_notifications">Dispositivos</string>
    <string name="title_eventsHistory">Historial</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user">Usuario:</string>
    <string name="userlog">Usuario</string>
    <string name="contact">Contacto:</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_register">REGISTRARSE</string>
    <string name="register">Registarse</string>
    <string name="action_save">GUARDAR</string>
    <string name="action_help">  Ayuda  </string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No es un usuario Válido</string>
    <string name="invalid_password">Password debe ser >5 caracterés</string>
    <string name="user_name">"Nombres:"</string>
    <string name="user_surname">"Apellidos:"</string>
    <string name="user_id">"ID:"</string>
    <string name="user_idType">"Tipo ID:"</string>
    <string name="user_Eps">"EPS:"</string>
    <string name="user_phone">"Telefono:"</string>
    <string name="user_pwd">"Contraseña:"</string>
    <string name="Select_device">"Seleccionar Dispositivo"</string>
    <string name="Select_device_1">"Agregar"</string>
    <string name="Add_or_Edit">"Añadir o Editar Contacto"</string>
    <string name="ca_textgraf">"Días VS Dosis"</string>
    <string name="texto_cont1">"Contacto 1"</string>
    <string name="texto_cont2">"Contacto 2"</string>
    <string name="texto_cont3">"Contacto 3"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="imagen_de_galeria_o_camara">Imagen de galeria o Camara</string>
    <string name="recoverPassword">Recuperar Password</string>
    <string name="login_failed">Datos Incorrectos</string>
    <string name="latitud" />
    <string name="todoe">TODOe</string>
    <string name="PermissionSaveImage">Permiso Denegado</string>
    <string name="titulografica">Fechas Vs Episodios</string>



    <string-array name="Identificacion">
            <item>Cedula</item>
            <item>Tarjeta de Identidad</item>
            <item>Pasaporte</item>
            <item>Cedula Extranjera</item>
    </string-array>

</resources>