<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   >


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/contact"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/smartwatch"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home1"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat1"

        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/registro"
        android:title="@string/title_eventsHistory" />

</menu>