<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_contacts"
        android:title="@string/title_dashboard"

        />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_smartwatch"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_home1"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_eventsHistory" />
    <item
        android:id="@+id/navigation_chat1"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

</menu>